# exchange-browser-worker

./: .gitignore  README.md  pyproject.toml
src/smarkets_automation/: __init__.py  bootstrap.py  browser.py  cli.py  config.py  discovery.py  logging_utils.py  market_snapshot.py  markets.py  orders.py  public_site.py
tests/: test_bootstrap.py  test_browser.py  test_browser_review_flow.py  test_cli_place_bet.py  test_cli_search_events.py  test_cli_show_market.py  test_cli_smoke.py  test_config.py  test_discovery.py  test_live_discovery_unit.py  test_live_market_extraction_unit.py  test_live_smoke.py  test_logging_utils.py  test_market_snapshot.py  test_markets.py  test_orders.py  test_public_site.py
tests/fixtures/: market_page.html  search_results.html
