[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smarkets-automation"
version = "0.1.0"
description = "Smarkets browser automation CLI."
requires-python = ">=3.11"

[project.scripts]
smarkets = "smarkets_automation.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
